--- a/Tane's Site/styles.css
+++ b/Tane's Site/styles.css
@@ -2,10 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Kumbh Sans", sans-serief;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
-/* 1 rem is 16 pixels */
 .navbar {
   background: #131313;
   height: 80px;
@@ -15,7 +14,6 @@
   font-size: 1.2rem;
   position: sticky;
   top: 0;
-  /* z-index keeps the nav bar abvove everything on the website */
   z-index: 999;
 }
 
@@ -26,27 +24,23 @@
   z-index: 1;
   width: 100%;
   max-width: 1300px;
-  /* Margin first value is top second value is right third is bottom and last is left */
-  /* If only two it will be top/bottom and right/left */
-  margin: 0 auto;
-  padding: 0 50px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 #navbar__logo {
   background-color: #ff8177;
-  /* linear gradient (going to the top direction, ) */
   background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
   background-size: 100%;
-  /* Adds color gradient to the text */
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
   display: flex;
   align-items: center;
-  /* Hand symbol when hover over */
   cursor: pointer;
-  /* Get rid of underlines */
   text-decoration: none;
   font-size: 2rem;
 }
@@ -58,7 +52,6 @@
 .navbar__menu {
   display: flex;
   align-items: center;
-  /* Get rid of bullet points */
   list-style: none;
   text-align: center;
 }
@@ -73,7 +66,6 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  /* Top/bottom = 0, left/right = 1 rem */
   padding: 0 1rem;
   height: 100%;
 }
@@ -83,7 +75,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 1rem;
-  width: 100;
+  width: 100%;
 }
 
 .button {
@@ -92,8 +84,8 @@
   align-items: center;
   text-decoration: none;
   padding: 10px 20px;
-  width: 100%;
   height: 100%;
+  width: 100%;
   border: none;
   outline: none;
   border-radius: 4px;
@@ -111,7 +103,6 @@
   transition: all 0.3s ease;
 }
 
-/* Mobile/tablet response */
 @media screen and (max-width: 960px) {
   .navbar__container {
     display: flex;
@@ -129,17 +120,13 @@
     margin: 0;
     width: 100%;
     position: absolute;
-    /* Top is set to -1000px to ensure it will never be seen but we use javascript to change this value to where it can bee seen once clicked on the menu button*/
     top: -1000px;
-    opacity: 0;
+    opacity: 1;
     transition: all 0.5s ease;
-    /* Viewport height */
     height: 50vh;
     z-index: -1;
-    background: #131313;
   }
 
-  /* javascript will trigger this. It will show the entire active menu */
   .navbar__menu.active {
     background: #131313;
     top: 100%;
@@ -173,13 +160,6 @@
     display: table;
   }
 
-  #mobile-menu {
-    position: absolute;
-    top: 20%;
-    right: 5%;
-    transform: translate(5%, 20%);
-  }
-
   .navbar__btn {
     padding-bottom: 2rem;
   }
@@ -189,7 +169,15 @@
     justify-content: center;
     align-items: center;
     width: 80%;
+    height: 80px;
     margin: 0;
+  }
+
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
   }
 
   .navbar__toggle .bar {
@@ -197,18 +185,172 @@
     cursor: pointer;
   }
 
-  /* target the second child bottom */
   #mobile-menu.is-active .bar:nth-child(2) {
     opacity: 0;
   }
 
-  /* target the top bar */
   #mobile-menu.is-active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
 
-  /* target the third bar */
-  #mobile-menu.is-active .bar:nth-child(1) {
+  #mobile-menu.is-active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+/* Main Content CSS */
+.main {
+  background-color: #141414;
+}
+
+.main__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-self: center;
+  margin: 0 auto;
+  height: 90vh;
+  background-color: #131313;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.main__content {
+  color: #fff;
+  width: 100%;
+}
+
+.main__content h1 {
+  font-size: 4rem;
+  background-color: #ff8177;
+  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.main__content h2 {
+  font-size: 4rem;
+  margin-top: 10px;
+  background-color: #ff8177;
+  background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.main__content p {
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.main__btn {
+  font-size: 1rem;
+  background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
+  padding: 14px 32px;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  margin-top: 2rem;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.35s;
+  outline: none;
+}
+
+.main__btn a {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  text-decoration: none;
+}
+
+.main__btn:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #4837ff;
+  transition: all 0.35s;
+  border-radius: 4px;
+}
+
+.main__btn:hover {
+  color: #fff;
+}
+
+.main__btn:hover:after {
+  width: 100%;
+}
+
+.main__img--container {
+  text-align: center;
+}
+
+#main__img {
+  height: 80%;
+  width: 80%;
+}
+
+/* Mobile Responsive */
+@media screen and (max-width: 768px) {
+  .main__container {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 90vh;
+  }
+
+  .main__content {
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  .main__content h1 {
+    font-size: 2.5rem;
+    margin-top: 2rem;
+  }
+
+  .main__content h2 {
+    font-size: 3rem;
+  }
+
+  .main__content p {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main__content h1 {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
+
+  .main__content h2 {
+    font-size: 2rem;
+  }
+
+  .main__content p {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+  }
+
+  .main__btn {
+    padding: 12px 36px;
+    margin: 2.5rem 0;
   }
 }
