--- a/Tane's Site/styles.css
+++ b/Tane's Site/styles.css
@@ -355,17 +355,18 @@
   }
 }
 
-/* Services Section CSS */
+/* Services Section */
 .services {
-  background: #141414;
+  background: #131313;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
 .services h1 {
-  background-color: #f18177;
+  background-color: #ff8177;
   background-image: linear-gradient(
     to right,
     #ff8177 0%,
@@ -376,15 +377,15 @@
     #b12a5b 100%
   );
   background-size: 100%;
-  margin-bottom: 5rem;
-  font-size: 2.5rem;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
+  margin-bottom: 5rem;
+  font-size: 2.5rem;
 }
 
-.services__cotainer {
+.services__container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -400,8 +401,56 @@
       rgba(0, 0, 0, 0) 0%,
       rgba(17, 17, 17, 0.6) 100%
     ),
-    url("/images/pic3.jpg");
+    url("./images/pic2.jpg");
   background-size: cover;
   position: relative;
   color: #fff;
+}
+
+.services__card:before {
+  opacity: 0.2;
+}
+
+.services__card:nth-child(2) {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(17, 17, 17, 0.9) 100%
+    ),
+    url("./images/pic3.jpg");
+}
+
+.services__card h2 {
+  position: absolute;
+  top: 350px;
+  left: 30px;
+}
+
+.services__card p {
+  position: absolute;
+  top: 400px;
+  left: 30px;
+}
+
+.services__card button {
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #f77062;
+  position: absolute;
+  top: 440px;
+  left: 30px;
+  font-size: 1rem;
+}
+
+.services__card button:hover {
+  cursor: pointer;
+}
+
+.services__card:hover {
+  transform: scale(1.075);
+  transition: 0.2s ease-in;
+  cursor: pointer;
 }
