--- a/Kiko's site/css/main.css
+++ b/Kiko's site/css/main.css
@@ -27,6 +27,41 @@ body {
 
 .navbar nav {
   display: none;
+  position: fixed;
+  z-index: 999;
+  width: 66%;
+  right: 0;
+  top: 0;
+  background: #20272e;
+  height: 100vh;
+  padding: 1em;
+}
+
+.navbar nav ul.primary-nav {
+  margin-top: 5em;
+}
+
+.navbar nav li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em;
+  font-size: 1.3em;
+  text-align: right;
+}
+
+.navbar nav li a:hover {
+  font-weight: bold;
+}
+
+.navbar nav img.mobile-menu-exit {
+  float: right;
+  margin: 0.5em;
+  cursor: pointer;
+}
+
+.navbar nav.menu-active {
+  display: block;
 }
 
 .navbar .container {
@@ -105,6 +140,10 @@ section.features-section {
 section.features-section ul.features-list {
   margin: 0;
   padding-left: 0.1em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(19rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
 }
 
 section.features-section li {
@@ -195,5 +234,65 @@ section.features-section img {
 iframe {
   width: 100%;
   height: 300px;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-menu,
+  .mobile-menu-exit {
+    display: none;
+  }
+  .navbar .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 180px auto;
+        grid-template-columns: 180px auto;
+    place-content: unset;
+  }
+  .navbar nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    background: none;
+    position: unset;
+    height: auto;
+    width: 100%;
+    padding: 0;
+  }
+  .navbar nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar nav li a {
+    color: black;
+    font-size: 1em;
+    padding: 0.1em 1em;
+  }
+  .navbar nav ul.primary-nav {
+    margin: 0;
+  }
+  .navbar nav li.current a {
+    font-weight: bold;
+  }
+  .navbar nav li.go-premium-cta a {
+    background: white;
+    border: solid var(--primary-color) 3px;
+    border-radius: 5em;
+    color: var(--primary-color);
+    font-weight: bold;
+    margin-top: -0.2em;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .navbar nav li.go-premium-cta a:hover {
+    color: white;
+    background: var(--primary-color);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    font-weight: 500;
+  }
 }
 /*# sourceMappingURL=main.css.map */
