--- a/Kiko's site/css/main.scss
+++ b/Kiko's site/css/main.scss
@@ -28,6 +28,39 @@ body {
 
   nav {
     display: none;
+    position: fixed;
+    z-index: 999;
+    width: 66%;
+    right: 0;
+    top: 0;
+    background: #20272e;
+    height: 100vh;
+    padding: 1em;
+    ul.primary-nav {
+      margin-top: 5em;
+    }
+    li {
+      a {
+        color: white;
+        text-decoration: none;
+        display: block;
+        padding: 0.5em;
+        font-size: 1.3em;
+        text-align: right;
+
+        &:hover {
+          font-weight: bold;
+        }
+      }
+    }
+    img.mobile-menu-exit {
+      float: right;
+      margin: 0.5em;
+      cursor: pointer;
+    }
+  }
+  nav.menu-active {
+    display: block;
   }
 
   .container {
@@ -101,6 +134,11 @@ section.features-section {
   ul.features-list {
     margin: 0;
     padding-left: 0.1em;
+    display: grid;
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(19rem, 1fr)
+    ); // this is pretty advanced and useful
   }
 
   li {
@@ -188,4 +226,56 @@ section.features-section {
 iframe {
   width: 100%;
   height: 300px;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-menu,
+  .mobile-menu-exit {
+    display: none;
+  }
+  .navbar .container {
+    display: grid;
+    grid-template-columns: 180px auto; // 180px for logo, take rest of space for remaining elements
+    place-content: unset;
+  }
+  .navbar nav {
+    display: flex;
+    justify-content: space-between;
+    background: none;
+    position: unset;
+    height: auto;
+    width: 100%;
+    padding: 0;
+    ul {
+      display: flex;
+    }
+    li {
+      a {
+        color: black;
+        font-size: 1em;
+        padding: 0.1em 1em;
+      }
+    }
+    ul.primary-nav {
+      margin: 0;
+    }
+    li.current a {
+      font-weight: bold;
+    }
+    li.go-premium-cta a {
+      background: white;
+      border: solid var(--primary-color) 3px;
+      border-radius: 5em;
+      color: var(--primary-color);
+      font-weight: bold;
+      margin-top: -0.2em;
+      transition: 0.5s;
+      &:hover {
+        color: white;
+        background: var(--primary-color);
+        transition: 0.5s;
+        font-weight: 500;
+      }
+    }
+  }
 }
