--- a/Kiko's site/css/main.scss
+++ b/Kiko's site/css/main.scss
@@ -261,9 +261,6 @@ iframe {
     ul.primary-nav {
       display: flex;
       margin: 0;
-      li {
-        padding-right: 0.5em;
-      }
     }
     li.current a {
       font-weight: bold;
@@ -280,8 +277,109 @@ iframe {
         color: white;
         background: var(--primary-color);
         transition: 0.5s;
-        // font-weight: 500;
       }
+    }
+  }
+}
+@media only screen and (min-width: 1080px) {
+  section.features-section {
+    .container {
+      width: 1080px;
+      margin: 0 auto;
+      ul.features-list {
+        display: block;
+        margin-left: 5em;
+      }
+    }
+    li {
+      font-size: 1.4em;
+      &:before {
+        width: 30px;
+        height: 30px;
+      }
+    }
+    position: relative;
+    img {
+      display: block;
+      position: absolute;
+      right: 0;
+      width: 350px;
+      bottom: -2em;
+    }
+  }
+
+  section {
+    padding: 10em 4em;
+  }
+  .hero .container {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    .left-col {
+      margin-right: 3em 3em 0 5em;
+      h1 {
+        font-size: 3em;
+        width: 90%;
+      }
+    }
+  }
+  .hero-img {
+    width: 30%;
+    margin-right: 8em;
+  }
+  .hero-cta {
+    display: flex;
+  }
+  .primary-cta {
+    margin-right: 1em;
+  }
+  .testimonials-section ul {
+    display: flex;
+    li {
+      margin: 0 1em;
+    }
+  }
+  .contact-section {
+    position: relative;
+
+    .container {
+      display: flex;
+    }
+    .contact-right {
+      margin: 2em;
+      border-radius: 2em;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 45%;
+      height: 100%;
+      iframe {
+        height: 100%;
+        border-radius: 2em;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1450px) {
+  .features-section {
+    &:before {
+      content: "";
+      position: absolute;
+      width: 10%;
+      height: 20em;
+      background: var(--primary-color);
+      left: 0;
+      top: -4em;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      width: 200px;
+      height: 20em;
+      background: url("../images/dots.svg") no-repeat;
+      left: 4.5em;
+      top: 2em;
     }
   }
 }
